Removal of locationMap in SimulationResult